# analyze-igc

./: Readme.md  Untitled.ipynb  pyproject.toml  requirements.txt
src/: main.py
src/crossanalyzer/: crossanalyzer.py
src/crossanalyzer/filterigc/: filter_igc.py
src/crossanalyzer/getigc/: get_syride_igc.py
src/filterigc/: filter_igc.py
src/getigc/: get-cfd-igc.py  get_syride_igc.py
tests/: test_crossanalyzer.py
