[tool.poetry]
name = "crossanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
bs4 = "^0.0.1"
requests = "^2.28.2"
aerofiles = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crossanalyzer = "crossanalyzer.crossanalyzer:cli"